
* #9411: forbid optional arguments reordering with -nolabels
  (Thomas Refis, review by Frédéric Bour and Jacques Garrigue)

- #9452: Add locations to docstring attributes
  (Leo White, review by Gabriel Scherer)

### Build system:

- #9250: Add --disable-ocamltest to configure and disable building for
  non-development builds.
  (David Allsopp, review by Sébastien Hinderer)

### Bug fixes:

- #7562, #9456: ocamlopt-generated code crashed on Alpine Linux on
  ppc64le, arm, and i386.  Fixed by turning PIE off for musl-based Linux
  systems except amd64 (x86_64) and s390x.
  (Xavier Leroy, review by Gabriel Scherer)

- #7683, #1499: Fixes one case where the evaluation order in native-code
  may not match the one in bytecode.
  (Nicolás Ojeda Bär, report by Pierre Chambart, review by Gabriel Scherer)

- #7696, #6608: Record expression deleted when all fields specified
  (Jacques Garrigue, report by Jeremy Yallop)

- #7741, #9645: Failure to report escaping type variable
  (Jacques Garrigue, report by Gabriel Radanne, review by Gabriel Scherer)

- #7817, #9546: Unsound inclusion check for polymorphic variant
  (Jacques Garrigue, report by Mikhail Mandrykin, review by Gabriel Scherer)

- #7917, #9426: Use GCC option -fexcess-precision=standard when available,
  avoiding a problem with x87 excess precision in Float.round.
  (Xavier Leroy, review by Sébastien Hinderer)

- #9064: Relax the level handling when unifying row fields
  (Leo White, review by Jacques Garrigue)

- #9097: Do not emit references to dead labels introduced by #2321 (spacetime).
  (Greta Yorsh, review by Mark Shinwell)

- #9189, #9281: fix a conflict with Gentoo build system
  by removing an one-letter Makefile variable.
  (Florian Angeletti, report by Ralph Seichter, review by David Allsopp
   and Damien Doligez)

- #9225: Do not drop bytecode debug info after C calls.
  (Stephen Dolan, review by Gabriel Scherer and Jacques-Henri Jourdan)

- #9231: Make sure a debug event (and the corresponding debug